crates/treelint-tests/tests/snapshots/integration_test__python_clean_file.snap
---
source: crates/treelint-tests/tests/integration_test.rs
expression: filtered_output
snapshot_kind: text
---
{
  "files": [
    {
      "duration": 0.0,
      "file_path": "clean_example.py",
      "language": "Python",
      "status": "Ok",
      "violations": []
    }
  ],
  "statistics": {
    "files_scanned": 4,
    "files_skipped": 0,
    "files_with_violations": 3,
    "total_duration_ms": 0.0,
    "total_files": 4,
    "total_violations": 7
  }
}
